app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil-playground
  labels:
    app: wil-playground
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wil-playground
  template:
    metadata:
      labels:
        app: wil-playground
    spec:
      containers:
      - name: wil-playground
        image: wil42/playground:v1  # <-- change ici v1 -> v2 pour tester l’update
        command: ["sh", "-c", "sleep infinity"]
        ports:
        - containerPort: 8888
