app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ci-lab-ingress
  namespace: argocd
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /argocd
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
  - http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: wil-playground
            port:
              number: 80
