app/ingress_argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure  # HTTPS uniquement
spec:
  ingressClassName: traefik
  rules:
  - host: local.argo.lab
    http:
      paths:
      - path: /argocd
        pathType: ImplementationSpecific
        backend:
          service:
            name: argocd-server
            port:
              number: 443
